2022-1/luan-camille-gabrielly-lucas-nicholas/.metadata/.plugins/org.eclipse.cdt.ui/motor-cc.build.log
13:37:32 **** Incremental Build of configuration Debug for project motor-cc ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G0B1xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:1:1: warning: multi-line comment [-Wcomment]
    1 | // -------------------------------------------------- \\
      | ^
../Core/Src/main.c: In function 'converter_dados':
../Core/Src/main.c:192:25: error: 'buzzer_GPIO_Port' undeclared (first use in this function); did you mean 'Verde_GPIO_Port'?
  192 |       HAL_GPIO_WritePin(buzzer_GPIO_Port, buzzer_Pin, 1);
      |                         ^~~~~~~~~~~~~~~~
      |                         Verde_GPIO_Port
../Core/Src/main.c:192:25: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:192:43: error: 'buzzer_Pin' undeclared (first use in this function)
  192 |       HAL_GPIO_WritePin(buzzer_GPIO_Port, buzzer_Pin, 1);
      |                                           ^~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:370:24: error: 'buzzer_GPIO_Port' undeclared (first use in this function); did you mean 'Verde_GPIO_Port'?
  370 |      HAL_GPIO_WritePin(buzzer_GPIO_Port, buzzer_Pin, 1);
      |                        ^~~~~~~~~~~~~~~~
      |                        Verde_GPIO_Port
../Core/Src/main.c:370:42: error: 'buzzer_Pin' undeclared (first use in this function)
  370 |      HAL_GPIO_WritePin(buzzer_GPIO_Port, buzzer_Pin, 1);
      |                                          ^~~~~~~~~~
../Core/Src/main.c:377:40: warning: passing argument 2 of 'LoRa_receive' from incompatible pointer type [-Wincompatible-pointer-types]
  377 |    packet_size = LoRa_receive(&myLoRa, received_data, 1);
      |                                        ^~~~~~~~~~~~~
      |                                        |
      |                                        uint32_t * {aka long unsigned int *}
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:125:44: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint32_t *' {aka 'long unsigned int *'}
  125 | uint8_t LoRa_receive(LoRa* _LoRa, uint8_t* data, uint8_t length);
      |                                   ~~~~~~~~~^~~~
../Core/Src/main.c:410:28: warning: passing argument 2 of 'LoRa_transmit' from incompatible pointer type [-Wincompatible-pointer-types]
  410 |     LoRa_transmit(&myLoRa, &currente, 1, 100);
      |                            ^~~~~~~~~
      |                            |
      |                            uint32_t * {aka long unsigned int *}
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:123:45: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint32_t *' {aka 'long unsigned int *'}
  123 | uint8_t LoRa_transmit(LoRa* _LoRa, uint8_t* data, uint8_t length, uint16_t timeout);
      |                                    ~~~~~~~~~^~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:37:32 Build Failed. 5 errors, 3 warnings. (took 222ms)

